--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -11,6 +11,7 @@ version: 2
 mkdocs:
   configuration: mkdocs.yml
   fail_on_warning: false
-
+build:
+  os: ubuntu-latest
 # Optionally build your docs in additional formats such as PDF and ePub
 formats: all
